--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/node_modules   
 
 # testing
 /coverage
+.vscode
 
 # production
 /build
@@ -19,3 +20,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
