--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "react-scripts": "1.0.7"
   },
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "marked": "^0.3.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
